Bug 414112. CSS 2.1 300px fallback width doesn't play nice with percentages. r=bzbarsky@mit.edu, sr=tor@acm.org, b1.9=mtschrep@gmail.com